--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
-	<h1>Robot Doom</h1>
+	<h1>Doom-bot</h1>
 	<div class="robots">
 		<div class="android"> 
 			<div class="head"> 
